
- Support for input of length 1

File: corr.rwl.seg.R
--------------------

- Fixed 'ylim' in plot()
- Fixed "no guides" case
- stops with a clear error message if 'rwl' has too few rows for the given
  'seg.length' and 'bin.floor' combination

File: rcs.R
-----------

- Graceful handling of empty input

File: read.tucson.R
-------------------

- Fixed trimming of all-NA rows

* CHANGES IN dplR VERSION 1.5.4

File: DESCRIPTION
-----------------

- Depends: R (>= 2.15.0) to accommodate use of .filled.contour() in
  wavelet.plot(). Also enables the use of paste0().

File: NAMESPACE
---------------

- Imports from package stringr (also in DESCRIPTION)
- Exports new function autoread.ids()

Various .R files
----------------

- use paste0(...) instead of paste(..., sep="")
- prettier, more consistent formatting of source code

File: helpers.R
---------------

- New internal function check.flags() requires that its arguments are TRUE
  or FALSE

File: read.ids.R
----------------

- Optional automatic detection of the site-tree-core scheme (stc="auto")
- Optional fixing of typos in series names
- Optional (adaptive) case insensitivity
- New wrapper function autoread.ids() calls read.ids with stc="auto" and
  an alternative set of parameter values

File: read.tucson.R
-------------------

- More robust detection of header

File: wavelet.plot.R
--------------------

- Switched from using an .Internal() call to using new bare-bones
  function .filled.contour() for the plotting. This is at the
  request of Prof. Ripley who wrote that 'Packages should not call
  .Internal(): it is not part of the API, for use only by R itself
  and subject to change without notice.' In 1.5.3, the use of
  .Internal() or .filled.contour() was an if-else decision based on
  the version of R, but now the latter function is always used,
  making R >= 2.15.0 required.
- enabled translation of default value of 'key.lab'
- checks 'wave.list$x' and 'wave.list$period'
